Filter not showing on reload fixed/page filter in url/show english titel in details/hover effects in details/

--- a/src/details/details.css
+++ b/src/details/details.css
@@ -296,12 +296,21 @@ h2{
   }
 }
 
+.pop:hover{
+  transform: scale(1.02);
+}
+
 .pop{
   border-radius: 5px;
   padding: 5px;
   color: white;
   background-color: var(--aqua);
+  transition: 0.3s ease;
 
+}
+
+.score:hover{
+  transform: scale(1.02);
 }
 
 .score{
@@ -309,14 +318,22 @@ h2{
   padding: 5px;
   color: white;
   background-color: var(--blue);
+  transition: 0.3s ease;
 }
 
+.fav:hover{
+  transform: scale(1.02);
+}
 .fav{
   border-radius: 5px;
   padding: 5px;
   color: white;
   background-color: var(--purple);
+  transition: 0.3s ease;
+}
 
+.rank:hover{
+  transform: scale(1.02);
 }
 
 .rank{
@@ -324,6 +341,7 @@ h2{
   padding: 5px;
   color: white;
   background-color: var(--yellow);
+  transition: 0.3s ease;
 }
 .char-title{
   position: absolute;
@@ -345,7 +363,9 @@ h2{
   width: 225px;
   height: 400px;
   border-radius: 10px;
+  transition: 0.3s ease;
 }
+
 @media (max-width: 768px) {
   .char {
     width: 180px;
@@ -360,6 +380,10 @@ h2{
 
 .char-container img{
   border-radius: 10px;
+}
+
+.char:hover{
+  transform: scale(1.02);
 }
 
 .char-container{
